crates/nash-report/tests/can/snapshots/can__module__tests__anonymous_record_constructor_argument_unsupported.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype D = D int { x : int }\n"
info: diagnostic
---
nash::names::unsupported

  × Unsupported feature: anonymous record constructor arguments.
   ╭─[src/Main.nash:3:16]
 2 │ 
 3 │ type D = D int { x : int }
   ·                ───────────
   ╰────
  help: This syntax is recognized, but its compiler implementation is not available yet.
