crates/nash-report/tests/can/snapshots/can__module__tests__duplicate_record_fields_in_expr.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf = { x = 1, x = 2 }\n"
info: diagnostic
---
nash::names::duplicate_field

  × This record has multiple `x` fields.
   ╭─[src/Main.nash:3:14]
 2 │ 
 3 │ f = { x = 1, x = 2 }
   ·       ┬      ┬
   ·       │      ╰── and another first definition
   ·       ╰── first definition
   ╰────
  help: Rename one of the definitions.
