crates/nash-report/tests/can/snapshots/can__module__tests__duplicate_value_decl.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nfoo = 1\n\nfoo = 2\n"
info: diagnostic
---
nash::names::duplicate_decl

  × This file has multiple `foo` declarations.
   ╭─[src/Main.nash:5:1]
 2 │ 
 3 │ foo = 1
   · ─┬─
   ·  ╰── first definition
 4 │ 
 5 │ foo = 2
   · ─┬─
   ·  ╰── and another first definition
   ╰────
  help: Rename one of the definitions.
