crates/nash-report/tests/can/snapshots/can__module__tests__if_then_else.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf x = if x then 1 else 2\n"
---
Module {
    traits: [],
    impls: [],
    kind: Normal,
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 4,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 1,
                    },
                    end: Position {
                        line: 3,
                        column: 2,
                    },
                },
                value: "f",
            },
            args: [
                Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 3,
                        },
                        end: Position {
                            line: 3,
                            column: 4,
                        },
                    },
                    value: Var(
                        "x",
                    ),
                },
            ],
            body: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 7,
                    },
                    end: Position {
                        line: 3,
                        column: 25,
                    },
                },
                value: If {
                    branches: [
                        IfBranch {
                            condition: Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 10,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 11,
                                    },
                                },
                                value: VarLocal(
                                    "x",
                                ),
                            },
                            then_branch: Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 17,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 18,
                                    },
                                },
                                value: Int(
                                    1,
                                ),
                            },
                        },
                    ],
                    final_else: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 24,
                            },
                            end: Position {
                                line: 3,
                                column: 25,
                            },
                        },
                        value: Int(
                            2,
                        ),
                    },
                },
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
