crates/nash-report/tests/can/snapshots/can__module__tests__import_exposing_not_found_type.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Foo exposing (Nonexistent)\n\nx = 1\n"
info: diagnostic
---
nash::names::import_exposing_not_found

  × The `Foo` module does not expose `Nonexistent`:
   ╭─[src/Main.nash:3:22]
 2 │ 
 3 │ import Foo exposing (Nonexistent)
   ·                      ───────────
 4 │ 
   ╰────
  help: Check that the module exposes this name.
