crates/nash-report/tests/can/snapshots/can__module__tests__infix_non_associativity.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing ((==))\n\ninfix non 4 (==) = eq\n\neq a b = a\n"
---
Module {
    traits: [],
    impls: [],
    kind: Normal,
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Explicit(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 23,
                    },
                    end: Position {
                        line: 1,
                        column: 27,
                    },
                },
                value: Binop(
                    "==",
                ),
            },
        ],
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 6,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 1,
                    },
                    end: Position {
                        line: 5,
                        column: 3,
                    },
                },
                value: "eq",
            },
            args: [
                Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 4,
                        },
                        end: Position {
                            line: 5,
                            column: 5,
                        },
                    },
                    value: Var(
                        "a",
                    ),
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 6,
                        },
                        end: Position {
                            line: 5,
                            column: 7,
                        },
                    },
                    value: Var(
                        "b",
                    ),
                },
            ],
            body: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 10,
                    },
                    end: Position {
                        line: 5,
                        column: 11,
                    },
                },
                value: VarLocal(
                    "a",
                ),
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [
        Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 1,
                },
                end: Position {
                    line: 5,
                    column: 1,
                },
            },
            value: Binop {
                symbol: "==",
                associativity: None,
                precedence: Precedence(
                    4,
                ),
                function: QualifiedName {
                    home: ModuleName {
                        package: None,
                        name: "Main",
                    },
                    name: "eq",
                },
                annotation: None,
            },
        },
    ],
}
